# mcp-server-sarvam

./: .gitignore  README.md  pyproject.toml
src/mcp_sarvam/: .env  __init__.py  sarvam.py  server.py  tools.py
